--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Resume - Start Bootstrap Theme</title>
+    <title>ch.DJV</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -21,7 +21,7 @@
     <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="css/resume.min.css" rel="stylesheet">
+    <link href="css/resume.css" rel="stylesheet">
 
   </head>
 
@@ -31,7 +31,7 @@
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
         <span class="d-block d-lg-none">Start Bootstrap</span>
         <span class="d-none d-lg-block">
-          <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
+          <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/logo.png" alt="">
         </span>
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -41,9 +41,6 @@
         <ul class="navbar-nav">
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#about">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#education">Education</a>
@@ -63,146 +60,92 @@
 
     <div class="container-fluid p-0">
 
+      <!-- 개요 -->
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
         <div class="my-auto">
-          <h1 class="mb-0">Clarence
-            <span class="text-primary">Taylor</span>
-          </h1>
-          <div class="subheading mb-5">3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
-            <a href="mailto:name@email.com">name@email.com</a>
-          </div>
-          <p class="mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
-          <ul class="list-inline list-social-icons mb-0">
-            <li class="list-inline-item">
-              <a href="#">
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#">
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#">
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#">
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-github fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-          </ul>
+          <h2 class="mb-0">Xavier &
+            <span class="mentee">이오주,이승수,허지원</span>
+          </h2>
+          <div class="subject"><데이터분석> 채널-데자뷰 : TV 영화 채널 별로 가장 많이 상영되는 영화는?</div>
+          <p class="mb-5">
+            <br/><br/>목&emsp;&emsp;표 : 케이블 TV 사이트에서 영화 채널의 편성표 데이터를 수집하여 채널별로 어떤 영화가 많이 상영되었는지 분석<br/>
+            <br/>기대효과 : 일정 기간 동안 가장 많이 상영 된 영화를 분석하여 TV 시청자들의 선호도와 비교할 수 있음<br/>
+            <br/>평가기준 : 얼마나 많은 데이터를 수집하였는가 / 얼마나 정확한 분석이 이루어졌는가 / 분석한 결과를 토대로 유용한 서비스가 이루어질 수 있는가<br/>
+          </p>
         </div>
       </section>
-      <!-- ocn20pieChart -->
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
-        <div class="my-auto">
-          <div id="ocn20pieChart"></div>
 
-        </div>
-
-      </section>
-
+      <!-- 작업결과 -->
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="education">
         <div class="my-auto">
-          <h2 class="mb-5">Education</h2>
+          <h2 class="mb-5">평가기준 결과내용</h2>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">University of Colorado Boulder</h3>
-              <div class="subheading mb-3">Bachelor of Science</div>
-              <div>Computer Science - Web Development Track</div>
-              <p>GPA: 3.23</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">August 2006 - May 2010</span>
+              <div class="subheading mb-3">I.얼마나 많은 데이터를 수집하였는가</div>
+              <hr/>
+              <p>
+                채널CGV : 743일 치 편성표 데이터 수집<br/>
+                OCN : 535일 치 편성표 데이터 수집<br/>
+                SuperAction : 743일 치 편성표 데이터 수집<br/>
+                중복 제외 총 2242 개의 영화<br/>
+                채널별 방영 횟수 상위 20개 영화에 대한 부가정보(장르, 국가 등) 수집
+              </p>
             </div>
           </div>
 
-          <div class="resume-item d-flex flex-column flex-md-row">
+          <div class="resume-item d-flex flex-column flex-md-row  mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">James Buchanan High School</h3>
-              <div class="subheading mb-3">Technology Magnet Program</div>
-              <p>GPA: 3.56</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">August 2002 - May 2006</span>
+              <div class="subheading mb-3">II.얼마나 정확한 분석이 이루어졌는가</div>
+              <hr/>
+              <p>채널별로 방영 횟수를 오류 없이 카운팅</p>
             </div>
           </div>
 
+          <div class="resume-item d-flex flex-column flex-md-row  mb-5">
+            <div class="resume-content mr-auto">
+              <div class="subheading mb-3">III.분석한 결과를 토대로 유용한 서비스가 이루어질 수 있는가</div>
+              <hr/>
+              <p>방영 횟수와 시청자의 영화 선호도를 파악하여 시청자와 방송사에게 영화 추천 서비스를 제공할 수 있을 것으로 예상</p>
+            </div>
+          </div>
         </div>
       </section>
 
+      <!-- 분석 결과 차트 -->
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="skills">
         <div class="my-auto">
-          <h2 class="mb-5">Skills</h2>
+          <h2 class="mb-5">분석 결과 차트</h2>
 
-          <div class="subheading mb-3">Programming Languages &amp; Tools</div>
-          <ul class="list-inline list-icons">
-            <li class="list-inline-item">
-              <i class="devicons devicons-html5"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-css3"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-javascript"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-jquery"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-sass"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-less"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-bootstrap"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-wordpress"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-grunt"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-gulp"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-npm"></i>
-            </li>
-          </ul>
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <div class="subheading mb-3">I.얼마나 많은 데이터를 수집하였는가</div>
+              <hr/>
+              <p>
+                채널CGV : 743일 치 편성표 데이터 수집<br/>
+                OCN : 535일 치 편성표 데이터 수집<br/>
+                SuperAction : 743일 치 편성표 데이터 수집<br/>
+                중복 제외 총 2242 개의 영화<br/>
+                채널별 방영 횟수 상위 20개 영화에 대한 부가정보(장르, 국가 등) 수집
+              </p>
+            </div>
+          </div>
 
-          <div class="subheading mb-3">Workflow</div>
-          <ul class="fa-ul mb-0">
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Mobile-First, Responsive Design</li>
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Cross Browser Testing &amp; Debugging</li>
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Cross Functional Teams</li>
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Agile Development &amp; Scrum</li>
-          </ul>
+          <div class="resume-item d-flex flex-column flex-md-row  mb-5">
+            <div class="resume-content mr-auto">
+              <div class="subheading mb-3">II.얼마나 정확한 분석이 이루어졌는가</div>
+              <hr/>
+              <p>채널별로 방영 횟수를 오류 없이 카운팅</p>
+            </div>
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row  mb-5">
+            <div class="resume-content mr-auto">
+              <div class="subheading mb-3">III.분석한 결과를 토대로 유용한 서비스가 이루어질 수 있는가</div>
+              <hr/>
+              <p>방영 횟수와 시청자의 영화 선호도를 파악하여 시청자와 방송사에게 영화 추천 서비스를 제공할 수 있을 것으로 예상</p>
+            </div>
+          </div>
         </div>
       </section>
 
