modify html code

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 
   <head>
 
@@ -43,16 +43,19 @@
             <a class="nav-link js-scroll-trigger" href="#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#education">Education</a>
+            <a class="nav-link js-scroll-trigger" href="#result">평가기준 결과내용</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
+            <a class="nav-link js-scroll-trigger" href="#top1">채널별 1위 영화</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
+            <a class="nav-link js-scroll-trigger" href="#cgvTop20">Ch.CGV TOP20</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
+            <a class="nav-link js-scroll-trigger" href="#ocnTop20">Ocn TOP20</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#sactionTop20">SuperAction TOP20</a>
           </li>
         </ul>
       </div>
@@ -76,9 +79,8 @@
       </section>
 
       <!-- 작업결과 -->
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="education">
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="result">
         <div class="my-auto">
-<<<<<<< HEAD
           <h2 class="mb-5">평가기준 결과내용</h2>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
@@ -110,93 +112,143 @@
               <p>방영 횟수와 시청자의 영화 선호도를 파악하여 시청자와 방송사에게 영화 추천 서비스를 제공할 수 있을 것으로 예상</p>
             </div>
           </div>
-=======
-          <div id="cgv20pieChart"></div>
->>>>>>> master
-        </div>
       </section>
 
       <!-- 분석 결과 차트 -->
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="skills">
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="top1">
         <div class="my-auto">
-<<<<<<< HEAD
-          <h2 class="mb-5">분석 결과 차트</h2>
+          <h2 class="mb-5">채널별 1위 영화</h2>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            <div class="resume-content mr-auto">
-              <div class="subheading mb-3">I.얼마나 많은 데이터를 수집하였는가</div>
+            <div class="resume-content mr-auto" style="float: left; width: 33%;">
+              <div class="subheading mb-3">Ch.CGV</div>
               <hr/>
               <p>
-                채널CGV : 743일 치 편성표 데이터 수집<br/>
-                OCN : 535일 치 편성표 데이터 수집<br/>
-                SuperAction : 743일 치 편성표 데이터 수집<br/>
-                중복 제외 총 2242 개의 영화<br/>
-                채널별 방영 횟수 상위 20개 영화에 대한 부가정보(장르, 국가 등) 수집
+                <table width="70%" style="text-align : center;">
+                  <tr>
+                    <th colspan="2">
+                      <img src="img/cgvTop1.jpg" alt="">
+                    </th>
+                  </tr>
+                  <tr>
+                    <td>방영횟수</td>
+                    <td>40회</td>
+                  </tr>
+                  <tr>
+                    <td>장르</td>
+                    <td>스릴러</td>
+                  </tr>
+                  <tr>
+                    <td>평점</td>
+                    <td>7.2</td>
+                  </tr>
+                  <tr>
+                    <td>국가</td>
+                    <td>한국</td>
+                  </tr>
+                  <tr>
+                    <td>감독</td>
+                    <td>백운학</td>
+                  </tr>
+                  <tr>
+                    <td>출연</td>
+                    <td>손현주</td>
+                  </tr>
+                </table>
+              </p>
+            </div>
+            <div class="resume-content mr-auto" style="float: left; width: 33%;">
+              <div class="subheading mb-3">OCN</div>
+              <hr/>
+              <p>
+                <table width="70%"  style="text-align : center;">
+                  <tr>
+                    <th colspan="2">
+                      <img src="img/ocnTop1.jpg" alt="">
+                    </th>
+                  </tr>
+                  <tr>
+                    <td>방영횟수</td>
+                    <td>52회</td>
+                  </tr>
+                  <tr>
+                    <td>장르</td>
+                    <td>액션/드라마</td>
+                  </tr>
+                  <tr>
+                    <td>평점</td>
+                    <td>8.4</td>
+                  </tr>
+                  <tr>
+                    <td>국가</td>
+                    <td>한국</td>
+                  </tr>
+                  <tr>
+                    <td>감독</td>
+                    <td>류승완</td>
+                  </tr>
+                  <tr>
+                    <td>출연</td>
+                    <td>황정민,유아인</td>
+                  </tr>
+                </table>
+              </p>
+            </div>
+            <div class="resume-content mr-auto" style="float: left; width: 33%;">
+              <div class="subheading mb-3">SuperAction</div>
+              <hr/>
+              <p>
+                <table width="70%"  style="text-align : center;">
+                  <tr>
+                    <th colspan="2">
+                      <img src="img/superactionTop1.jpg" alt="">
+                    </th>
+                  </tr>
+                  <tr>
+                    <td>방영횟수</td>
+                    <td>26회</td>
+                  </tr>
+                  <tr>
+                    <td>장르</td>
+                    <td>로맨스/멜로</td>
+                  </tr>
+                  <tr>
+                    <td>평점</td>
+                    <td>5.9</td>
+                  </tr>
+                  <tr>
+                    <td>국가</td>
+                    <td>한국</td>
+                  </tr>
+                  <tr>
+                    <td>감독</td>
+                    <td>이숭환</td>
+                  </tr>
+                  <tr>
+                    <td>출연</td>
+                    <td>김나연,이정우,한채진</td>
+                  </tr>
+                </table>
               </p>
             </div>
           </div>
+      </section>
 
-          <div class="resume-item d-flex flex-column flex-md-row  mb-5">
-            <div class="resume-content mr-auto">
-              <div class="subheading mb-3">II.얼마나 정확한 분석이 이루어졌는가</div>
-              <hr/>
-              <p>채널별로 방영 횟수를 오류 없이 카운팅</p>
-            </div>
-          </div>
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="cgvTop20">
+        <div class="my-auto">
+          <div id="cgv20pieChart"></div>
+        </div>
+      </section>
 
-          <div class="resume-item d-flex flex-column flex-md-row  mb-5">
-            <div class="resume-content mr-auto">
-              <div class="subheading mb-3">III.분석한 결과를 토대로 유용한 서비스가 이루어질 수 있는가</div>
-              <hr/>
-              <p>방영 횟수와 시청자의 영화 선호도를 파악하여 시청자와 방송사에게 영화 추천 서비스를 제공할 수 있을 것으로 예상</p>
-            </div>
-          </div>
-=======
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="ocnTop20">
+        <div class="my-auto">
+          <div id="ocn20pieChart"></div>
+        </div>
+      </section>
+
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="sactionTop20">
+        <div class="my-auto">
           <div id="saction20pieChart"></div>
->>>>>>> master
-        </div>
-      </section>
-
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
-        <div class="my-auto">
-          <h2 class="mb-5">Interests</h2>
-          <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skiier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-          <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technolgy advancements in the front-end web development world.</p>
-        </div>
-      </section>
-
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="awards">
-        <div class="my-auto">
-          <h2 class="mb-5">Awards &amp; Certifications</h2>
-          <ul class="fa-ul mb-0">
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              Google Analytics Certified Developer</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              Mobile Web Specialist - Google Certification</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
-              Place - University of Colorado Boulder - Emerging Tech Competition 2009</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
-              Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              2<sup>nd</sup>
-              Place - University of Colorado Boulder - Emerging Tech Competition 2008</li>
-            <li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
-              Place - James Buchanan High School - Hackathon 2006</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              3<sup>rd</sup>
-              Place - James Buchanan High School - Hackathon 2005</li>
-          </ul>
         </div>
       </section>
 
