차트 배치 변경

--- a/index.html
+++ b/index.html
@@ -321,10 +321,10 @@ eval('var myLine = new Chart(document.getElementById(ChartId).getContext("2d")).
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="nationvs">
         <div id="nation_content" class="my-auto">
           <div id="nationline">
-            <div id="cgvNationpie"></div>
-            <div id="ocnNationpie"></div>
+            <div id="cgvNationpie" style="float: left; width: 30%;"></div>
+            <div id="ocnNationpie" style="float: left; width: 30%;"></div>
+            <div id="sactionNationpie" style="float: left; width: 30%;"></div>
           </div>
-          <div id="sactionNationpie"></div>
         </div>
       </section>
 
